Fix margin btn too big

--- a/src/main.scss
+++ b/src/main.scss
@@ -175,7 +175,7 @@ body {
 
         @include respond(medium) {
             position: static;
-            margin: 6rem auto 4rem;
+            margin: 6rem auto 2rem;
         }
     }
 }
